<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">How Are You Today</string>
	<string name="hello_world">Welcome to How Are You Today! \n In a long-distance relationship?\n Want to keep track of each other\'s mood? \n Simply record your mood and your partner will know! </string>
	<string name="action_settings">Settings</string>
	<string name="new_moment_hint">Write down, capture, record and treasure a moment of your love story.</string>
	<string name="new_moment_hint_location">Add location: </string>
	<string name="title_activity_love_story">Love Story</string>
	<string name="title_activity_new_love_story">Add a Moment</string>
	<string name="title_activity_web_view">WebView</string>
	<string name="title_activity_log_in">LogIn</string>
	<string name="title_activity_welcome">Welcome</string>
	<string name="title_activity_sort">Sort</string>
	<string name="title_activity_main">How Are You Today?</string>
	<string name="button_signup">Sign Up</string>
	<string name="button_login">Log In</string>
	<string name="button_logOut">Log Out</string>
	<string name="button_recordmood">RECORD MY MOOD</string>
	<string name="signup">Sign Up</string>
	<string name="signup_username">Username:</string>
	<string name="signup_password">Password:</string>
	<string name="signup_password2">Re-enter password:</string>
	<string name="signup_email">Email:</string>
	<string name="submit">Submit</string>
	<string name="forget_password">Forget your password?</string>
	<string name="title_activity_forget_password">Reset Password</string>
    <string name="reset_password">Please enter your email address, and an email will be sent to
    allow you to reset your password.</string>
	<string name="match">Match with your partner\'s account to share your mood!</string>
	<string name="match_hint">Your partner\'s username:</string>
	<string name="match_skip">Skip for now</string>
	<string name="title_activity_match_with_parther">Match With Partner</string>
	<string name="action_write">New</string>
	<string name="action_search">Search</string>

	<string name="title_activity_new">Add new Mood</string>
	<string name="title_activity_my_account">My Account</string>
	<string name="call">Call My Partner</string>
	<string name="my_username">Username: </string>
	<string name="partner">Partner: </string>
	<string name="partner_notmatch">Haven\'t matched with my partner yet.</string>
	<string name="my_email">Email: </string>
	<string name="gender_female">Female </string>
	<string name="gender_male">Male </string>
	<string name="title_activity_moment_detail">Moment</string>
	<string name="delete_alertMsg">Are you sure you want to delete this mood?</string>
	<string name="delete_alertTtl">Delete the mood? </string>
	<string name="delete_confirm">Delete</string>
	<string name="delete_cancel">Cancel</string>
	<string name="toast_done">Moment Added!</string>
	<string name="toast_imgSaved">Image saved to:</string>
	<string name="toast_userCancel">User Cancelled</string>
	<string name="toast_captureFail">Capture Failed</string>
	<string name="toast_signup">Successfully signed up!</string>
	<string name="toast_password">Passwords don\'t match!</string>
	<string name="toast_login">Successfully logged in!</string>
	<string name="toast_match">Successfully matched with user:  </string>
	<string name="toast_match2">You both need to match with each other to confirm.</string>
	<string name="toast_matchLater">You can go to "My Account" to match with your partner later.</string>
	<string name="toast_match_found">This user has added you. Adding this user now...</string>
	<string name="toast_match_not_found">Your partner has not added you yet! Adding this user now... </string>
	<string name="toast_match_already">This user has already matched with someone else!</string>
	<string name="toast_match_no_user">Sorry, the user doesn\'t exist!</string>
	<string name="toast_forgetPw">Email sent!</string>
	<string name="toast_delete">Moment successfully deleted.</string>
	<string name="toast_matchAlready">You have already matched with: </string>
	<string name="toast_logout">Successfully logged out.</string>
	<string name="toast_signup_alert_gender">You must select gender!</string>
	<string name="toast_signup_alert">Please fill out the information!</string>
	<string name="toast_record_mood">Successfully recorded your mood!</string>
	<string name="toast_no_internet">No Internet connection. Please turn on the Internet and reopen the app.</string>

	<string name="mood_description_hint_sad">What made you feel sad?</string>
	<string name="mood_description_hint_happy">What made you feel happy?</string>
	<string name="mood_description_hint_good">What made you feel good?</string>
	<string name="mood_description_hint_ok">What made you feel OK?</string>
	<string name="mood_description_hint_crying">What made you feel crying?</string>
	<string name="mood_description_hint_angry">What made you feel angry?</string>
	<string name="tag_choose">Add tags to specify your mood:</string>
	<string name="tag_add">add a tag</string>
	<string name="tag_prompt">Click here to add a tag</string>

	<string name="choice_comfort">I want comfort.</string>
	<string name="choice_alone">Leave me alone.</string>

	<string name="display_mood">My Mood</string>
	<string name="display_mood_partner">My Partner\'s Mood</string>
	<string name="record_mood_prompt">How are you today?</string>
	<string name="want_comfort">I want comfort</string>
	<string name="partner_no_mood">Your partner hasn’t recorded today’s mood yet!</string>
	<string name="no_mood_records">Oops, no mood recorded yet!</string>

	<string name="title_section1">TODAY</string>
	<string name="title_section2">MY HISTORY</string>
	<string name="title_section3">PARTNER\'S HISTORY</string>

    <string name="credits">Copyright 2015 Linyin Wang \n All Rights Reserved.
    </string>
	<string name="title_activity_new_mood">NewMood</string>
	<string name="title_activity_mood">Mood</string>
	<string name="title_activity_sad">sad</string>

	<string name="title_activity_tag_editor">Edit Tag</string>
	<string name="title_activity_today_fragment">TodayFragment</string>
	<string name="title_activity_history_fragment">HistoryFragment</string>
	<string name="title_activity_good">Good</string>
	<string name="title_activity_happy">happy</string>
	<string name="title_activity_ok">OK</string>
	<string name="title_activity_angry">Angry</string>
	<string name="title_activity_crying">Crying</string>
	<string name="title_activity_settings">Settings</string>

	<string name="pref_notification_title">Receive notifications</string>
	<string name="pref_notification_key">pref_notificationType</string>
	<string name="pref_notification_type_dialog_title">When would you like to receive notifications?</string>
	<string name="pref_notification_type_default">all</string>

	<string-array
		name="pref_notification_type_entries">
		<item>When my partner adds a mood.</item>
		<item>Only when my partner is in a bad mood.</item>
		<item>Never</item>
	</string-array>
	<string-array
		name="pref_notification_type_entry_values">
		<item>all</item>
		<item>part</item>
		<item>none</item>
	</string-array>


</resources>
