<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.example.haylin2002.loveStory.LoveStory">

	<item
		android:id="@+id/action_new"
		android:icon="@drawable/plus"
		android:orderInCategory="1"
		android:title="@string/title_activity_new"
		app:showAsAction="always"/>

	<item
		android:id="@+id/action_call"
		android:icon="@drawable/phone"
		android:orderInCategory="2"
		android:title="@string/call"
		app:showAsAction="ifRoom"/>
	<item
		android:id="@+id/action_profile"
		android:icon="@drawable/contacts"
		android:orderInCategory="3"
		android:title="@string/title_activity_my_account"
		app:showAsAction="ifRoom"/>

	<item
		android:id="@+id/action_settings"
		android:orderInCategory="100"
		android:title="@string/action_settings"
		app:showAsAction="never"/>

</menu>
