<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.example.haylin2002.parselocaldatabase.LogIn"
	>


	<EditText
		android:id="@+id/name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:ems="10"
		android:hint="@string/signup_email"
		android:inputType="textPersonName"
		android:paddingTop="10dp"/>

	<EditText
		android:id="@+id/password"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@+id/name"
		android:layout_alignStart="@+id/name"
		android:layout_below="@+id/name"
		android:ems="10"
		android:hint="@string/signup_password"
		android:inputType="textPassword"/>

	<Button
		android:id="@+id/logIn"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/password"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="24dp"
		android:background="@color/primary"
		android:onClick="logIn"
		android:text="@string/button_login"
		android:textColor="@android:color/white"/>

	<Button
		android:id="@+id/button"
		style="?android:attr/borderlessButtonStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/logIn"
		android:layout_centerHorizontal="true"
		android:onClick="forgetPassword"
		android:text="@string/forget_password"
		android:textColor="@color/accent"/>


</RelativeLayout>
