<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.example.haylin2002.loveStory.ForgetPassword">

	<EditText
		android:id="@+id/username"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/textView4"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="36dp"
		android:hint="@string/match_hint"/>

	<Button
		android:id="@+id/match"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_below="@+id/username"
		android:layout_marginTop="41dp"

		android:background="@color/primary"
		android:onClick="matchPartner"
		android:text="@string/submit"
		android:textColor="@android:color/white"/>

	<TextView
		android:id="@+id/textView4"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_alignParentTop="true"
		android:text="@string/match"
		android:textAppearance="?android:attr/textAppearanceMedium"/>

	<Button
		android:id="@+id/button"
		style="?android:attr/borderlessButtonStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/match"
		android:layout_centerHorizontal="true"

		android:onClick="skipMatching"
		android:text="@string/match_skip"
		android:textColor="@color/ok"/>
</RelativeLayout>

