<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.example.haylin2002.loveStory.MyAccount">


	<ImageView
		android:id="@+id/profileImg"
		android:layout_width="180dp"
		android:layout_height="180dp"
		android:layout_gravity="center"
		android:layout_marginBottom="10dp"/>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/textView5"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/my_username"
			android:textAppearance="?android:attr/textAppearanceMedium"/>

		<TextView
			android:id="@+id/username"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end"
			android:layout_marginLeft="2dp"
			android:text=""
			android:textAppearance="?android:attr/textAppearanceMedium"/>

	</LinearLayout>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/textView6"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/my_email"
			android:textAppearance="?android:attr/textAppearanceMedium"/>

		<TextView
			android:id="@+id/email"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end"
			android:layout_marginLeft="2dp"
			android:text=""
			android:textAppearance="?android:attr/textAppearanceMedium"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/textView7"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/partner"
			android:textAppearance="?android:attr/textAppearanceMedium"/>

		<TextView
			android:id="@+id/partner"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end"
			android:layout_marginLeft="2dp"
			android:text="@string/partner_notmatch"
			android:textAppearance="?android:attr/textAppearanceMedium"/>

	</LinearLayout>

	<Button
		android:id="@+id/match"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentEnd="true"
		android:layout_alignParentRight="true"
		android:layout_marginTop="33dp"
		android:background="@color/ok"
		android:onClick="goToMatchPage"

		android:text="@string/title_activity_match_with_parther"
		android:textColor="@android:color/white"/>

	<Button
		android:id="@+id/logOut"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="24dp"
		android:background="@color/primary"
		android:onClick="logOut"
		android:text="@string/button_logOut"
		android:textColor="@android:color/white"

		/>

</LinearLayout>
