<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.example.haylin2002.parselocaldatabase.LogIn"
	>


	<ImageView
		android:id="@+id/imageView2"
		android:layout_width="100dp"
		android:layout_height="100dp"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"
		android:layout_gravity="center"
		android:layout_marginTop="30dp"
		android:src="@drawable/icon_v2"/>

	<TextView
		android:id="@+id/textView3"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/imageView2"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="30dp"
		android:gravity="center"
		android:text="@string/hello_world"
		android:textAppearance="?android:attr/textAppearanceMedium"/>


	<Button
		android:id="@+id/signUp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:background="@color/ok"
		android:onClick="goToSignUpPage"
		android:text="@string/signup"

		android:textColor="@android:color/white"/>

	<Button
		android:id="@+id/logIn"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:background="@color/primary"
		android:onClick="goToLogInPage"
		android:text="@string/button_login"
		android:textColor="@android:color/white"
		/>

	<TextView
		android:id="@+id/credits"
		android:layout_width="match_parent"

		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_gravity="bottom"

		android:layout_marginTop="30dp"
		android:gravity="center"
		android:text="@string/credits"/>


</LinearLayout>
