<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.example.haylin2002.loveStory.ForgetPassword">

	<EditText
		android:id="@+id/email"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/textView4"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="36dp"
		android:ems="10"
		android:hint="@string/signup_email"
		android:inputType="textEmailAddress"/>

	<Button
		android:id="@+id/reset"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_below="@+id/email"
		android:layout_marginTop="41dp"

		android:background="@color/primary"
		android:onClick="resetPassword"
		android:text="@string/submit"
		android:textColor="@android:color/white"/>

	<TextView
		android:id="@+id/textView4"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_alignParentTop="true"
		android:text="@string/reset_password"
		android:textAppearance="?android:attr/textAppearanceMedium"/>
</RelativeLayout>
