<RelativeLayout
	android:id="@+id/relative_layout"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:custom="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/hint"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context="linyingwang.howareyoutoday.Angry">


	<ImageView
		android:id="@+id/imageView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"
		android:layout_gravity="center_horizontal"
		/>

	<EditText
		android:id="@+id/mood_description"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignEnd="@+id/button2"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_alignRight="@+id/button2"
		android:layout_below="@+id/imageView"
		android:layout_marginTop="30dp"
		android:maxLength="50"
		android:textColor="@color/white"
		android:textColorHint="@color/hint"/>

	<TextView
		android:id="@+id/textView2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_below="@+id/textView"
		android:layout_marginTop="10dp"
		android:text="@string/tag_choose"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textColor="@color/white"/>

	<TextView
		android:id="@+id/tv_prompt"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/textView2"
		android:paddingBottom="5dp"
		android:paddingTop="5dp"
		android:text="@string/tag_prompt"
		android:textColor="@color/hint"/>

	<me.gujun.android.taggroup.TagGroup
		android:id="@+id/tag_group"
		style="@style/TagGroup.Large"
		android:layout_alignParentEnd="true"
		android:layout_alignParentRight="true"
		android:layout_below="@+id/textView2"
		android:layout_marginTop="10dp"
		custom:atg_borderColor="@color/white"
		custom:atg_inputHint="add a tag"
		custom:atg_isAppendMode="false"
		custom:atg_textColor="@color/partner_no_mood"
		/>

	<TextView
		android:id="@+id/textView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentEnd="true"
		android:layout_alignParentRight="true"
		android:layout_below="@+id/mood_description"
		android:text="50"
		android:textAppearance="?android:attr/textAppearanceSmall"
		android:textColor="@color/hint"/>

	<RadioButton
		android:id="@+id/radioButton_alone"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_above="@+id/button2"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_marginBottom="16dp"
		android:onClick="onRadioButtonClicked"
		android:text="@string/choice_alone"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textColor="@color/white"
		android:visibility="invisible"
		/>

	<RadioButton
		android:id="@+id/radioButton_comfort"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_above="@+id/radioButton_alone"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:onClick="onRadioButtonClicked"
		android:text="@string/choice_comfort"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textColor="@color/white"
		android:visibility="invisible"
		/>

	<ProgressBar
		android:id="@+id/progressBar"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/tv_prompt"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="34dp"
		android:visibility="gone"/>

	<Button
		android:id="@+id/button2"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:background="@color/white"
		android:onClick="RecordMood"
		android:text="@string/button_recordmood"/>


</RelativeLayout>
